@@ -21,7 +21,7 @@ public class SteerForWander : Steering
 	float _maxLatitudeUp = 2;
     
     /// <summary>
-    /// The smooth rate on which the random walk values are blended. Set to 1 for no smoothing.
+	/// The smooth rate per second to apply to the random walk value during blending.
     /// </summary>
     [SerializeField]
     float _smoothRate = 0.05f;
@@ -54,15 +54,15 @@ public class SteerForWander : Steering
 	#endregion
 
 	
-	protected override Vector3 CalculateForce ()
+	protected override Vector3 CalculateForce()
 	{
 		float speed = Vehicle.MaxSpeed;
 
 		// random walk WanderSide and WanderUp between -1 and +1        
         var randomSide = OpenSteerUtility.scalarRandomWalk(_wanderSide, speed, -_maxLatitudeSide, _maxLatitudeSide);
         var randomUp = OpenSteerUtility.scalarRandomWalk(_wanderUp, speed, -_maxLatitudeUp, _maxLatitudeUp);
-		_wanderSide = OpenSteerUtility.blendIntoAccumulator(_smoothRate, randomSide, _wanderSide);
-        _wanderUp = OpenSteerUtility.blendIntoAccumulator(_smoothRate, randomUp, _wanderUp);
+		_wanderSide = OpenSteerUtility.blendIntoAccumulator(_smoothRate * Vehicle.DeltaTime, randomSide, _wanderSide);
+		_wanderUp = OpenSteerUtility.blendIntoAccumulator(_smoothRate * Vehicle.DeltaTime, randomUp, _wanderUp);
         
         
 		Vector3	 result = (Vehicle.Transform.right * _wanderSide) + (Vehicle.Transform.up * _wanderUp) + Vehicle.Transform.forward;
